# TrainingBook

./: .gitignore  README.md  command.py  command_add.py  command_channel_infos.py  command_feedback.py  command_google.py  command_graph.py  command_hello.py  command_shop.py  command_tictactoe.py  command_training_create_exercise_template.py  command_training_create_program_type.py  command_training_create_session.py  command_training_create_session_live.py  main_training_bot.py  migration_script.py  pyproject.toml  storage.py
.github/workflows/: deploy.yml
datamodel/: __init__.py  metamodel.py  training.py  user.py
